--- a/resolv.yml
+++ b/resolv.yml
@@ -10,7 +10,7 @@
           host: mail.sandeshonline.in
           port: 587
           username: juhi@silvereye.co
-          password: Welcome@989#
+          password: Escorts@989#
           sender: juhi@silvereye.co
           to: juhi@silvereye.co
           subject: "Test Email"
