--- a/resolv.yml
+++ b/resolv.yml
@@ -7,8 +7,8 @@
        
      - name: fetch nginx access log
        fetch:
-          src: /tmp
-          dest: /tmp/dns1.txt
+          src: /tmp/dns1.txt
+          dest: /tmp/
           flat: yes
        delegate_to: localhost
 
