--- a/resolv.yml
+++ b/resolv.yml
@@ -4,7 +4,8 @@
   tasks:
      - name: check all the dns entries
        shell: cat /etc/resolv.conf >> /opt/dns.txt
-
+       delegate_to: localhost
+       
      - name: fetch nginx access log
        fetch:
           src: /opt/dns.txt
