--- a/resolv.yml
+++ b/resolv.yml
@@ -10,7 +10,7 @@
        fetch:
           src: /opt/dns.txt
           dest: /tmp/
-          remote_src: yes
+          flat: yes
        delegate_to: localhost
        
      - name: check all the dns entries
