--- a/resolv.yml
+++ b/resolv.yml
@@ -11,6 +11,7 @@
           src: /opt/dns.txt
           dest: /tmp/
           flat: yes
+          remote_src: yes
        delegate_to: localhost
        
      - name: check all the dns entries
