--- a/resolv.yml
+++ b/resolv.yml
@@ -3,7 +3,8 @@
   hosts: localhost
   tasks:
      - name: check all the dns entries
-       shell: cat /etc/resolv.conf >> /opt/dns.txt
+       shell: cat /etc/resolv.conf > /opt/dns.txt
+       delegate_to: localhost      
        
      - name: fetch nginx access log
        fetch:
