--- a/resolv.yml
+++ b/resolv.yml
@@ -4,18 +4,18 @@
   tasks:
      - name: check all the dns entries
        shell: cat /etc/resolv.conf > /opt/dns.txt
-       delegate_to: localhost      
+#       delegate_to: localhost      
        
      - name: fetch nginx access log
        fetch:
           src: /opt/dns.txt
           dest: /tmp/
           remote_src: yes
-       delegate_to: localhost
+#       delegate_to: localhost
        
      - name: check all the dns entries
        shell: cat /tmp/localhost/opt/dns.txt       
-       delegate_to: localhost
+#       delegate_to: localhost
        
      - name: Delete content & directory
        file:
