--- a/resolv.yml
+++ b/resolv.yml
@@ -7,14 +7,14 @@
 #       delegate_to: localhost      
        
      - name: fetch nginx access log
-       fetch:
+       copy:
           src: /opt/dns.txt
           dest: /tmp/
           remote_src: yes
 #       delegate_to: localhost
        
      - name: check all the dns entries
-       shell: cat /tmp/localhost/opt/dns.txt       
+       shell: cat /opt/dns.txt       
 #       delegate_to: localhost
        
      - name: Delete content & directory
